[tool.poetry]
name = "spurious-correlations"
version = "0.1.0"
description = ""
authors = ["Vitor José Stähelin <vitorjosestahelin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
matplotlib = "^3.8.4"
pickledb = "^0.9.2"
black = {extras = ["jupyter"], version = "^24.3.0"}
ruff = "^0.3.5"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
